Trim Dependencies
Refactored code to remove the need for commons-codec, commons-io, and commons-lang3.